--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
   <!-- Leaflet-Choropleth API -->
   <script type="text/javascript" src="leaflet-choropleth.js"></script>
+  <!-- Simple-Statistics cdn -->
+  <script type="text/javascript" src='https://unpkg.com/simple-statistics@6.1.1/dist/simple-statistics.min.js'></script>
+
   <style type="text/css">
     html, body, #map{
     height: 100%;
@@ -47,11 +50,15 @@
       float: left;
       padding-bottom: 5px;
     }
+ 
     .legend .max {
       float: right;
     }
     h1 {
       text-align: center
+    }
+    h1 div {
+      font-size: 10px
     }
   </style>
 </head>
