--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
 </head>
 <body>
   <div id="map"></div>
-  <script type="text/javascript" src="choropleth_dc.js"></script>
+  <script type="text/javascript" src="choropleth-paris.js"></script>
 </body>
 </html>
